--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!--
- * @Author: BigCiLeng && bigcileng@outlook.com
+ * @Author: KevinS729 && Kevin729@tongji.edu.cn
  * @Date: 2023-07-25 02:03:25
- * @LastEditors: BigCiLeng && bigcileng@outlook.com
- * @LastEditTime: 2023-12-11 20:19:36
- * @FilePath: \BigCileng.github.io\index.html
+ * @LastEditors: KevinS729 && Kevin729@tongji.edu.cn
+ * @LastEditTime: 2023-12-18 20:19:36
+ * @FilePath: \KevinSONG729.github.io\index.html
  * @Description: 
  * 
- * Copyright (c) 2023 by bigcileng@outlook.com, All Rights Reserved. 
+ * Copyright (c) 2023 by Kevin729@tongji.edu.cn, All Rights Reserved. 
 -->
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Nana Wang</title>
+  <title>Xiaowei Song</title>
   
-  <meta name="author" content="Nan Wang">
+  <meta name="author" content="Xiaowei Song">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -34,19 +34,19 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Nan Wang&nbsp;&nbsp;&nbsp;王楠</name>
+                <name>Xiaowei Song&nbsp;&nbsp;&nbsp;宋枭炜</name>
               </p>
-              <p>I am going to be a Second-year Computer Science Master's student at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>.
+              <p>I am a Second-year Computer Science Master's student at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>.
               </p>
               <p>
-               I did my B.Sc. in Compter Science and Technology at <a href="https://www.swjtu.edu.cn/">Southwest Jiaotong University</a>.</p>
-              <p>My research interests are computer vision, machine learning and multi modal, specifically, learning-based methods for 3D shape analysis, Geometry processing, Neural implicit representation, Generation, etc.</p>
+               I did my B.Sc. in Compter Science and Technology at <a href="https://cs.shu.edu.cn/">Shanghai University</a>.</p>
+              <p>My research interests are computer vision, machine learning and multimodal generation, specifically, learning-based methods for 3D implicit representation, 3D Gaussian Splatting, Generation, etc.</p>
               <p>If you find any research interests that we might share, feel free to drop me an email. I am always open to potential collaborations. </p>
               <p style="text-align:center">
-                <a href="mailto:bigcileng@outlook.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:Kevin729@tongji.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="data/NanWang_CV_Chinese.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://github.com/BigCiLeng/">Github</a>&nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/joman-jolan-900631251/">Linkedin</a>
+                <a href="https://github.com/KevinSONG729/">Github</a>&nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/%E6%9E%AD%E7%82%9C-%E5%AE%8B-072b822a5/">Linkedin</a>
               </p>
               <p style="text-align:center">
               中文&nbsp/&nbspEnglish
