--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/wn1.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/wn1.png" class="hoverZoomLink"></a>
+              <a href="images/sxw.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sxw.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -65,10 +65,10 @@
           <!-- write logos here -->
           <tr>
             <td style=width:20%;vertical-align:middle;padding-left:20px>
-              <a href="https://see.tongji.edu.cn/index.htm"><img height="75" src="images/tj.png"></a>
+              <a href="https://see.tongji.edu.cn/index.htm"><img height="65" src="images/tj3.png"></a>
             </td>
             <td style=width:20%;vertical-align:middle;padding-left:20px>
-              <a href="https://www.swjtu.edu.cn/"><img height="75" src="images/swjtu.jpg"></a>
+              <a href="https://www.shu.edu.cn/"><img height="140" src="images/shu.jpg"></a>
             </td>
           </tr>
         </tbody></table>
@@ -88,11 +88,11 @@
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
             I am a M.Sc student in Computer Science at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>. 
             <br><br>
-            Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://www.swjtu.edu.cn/">Department of Computer Science and Artificial Intelligence, Southwest Jiaotong University</a> in 2022.
+            Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://cs.shu.edu.cn/">Department of Computer Engineering and Science, Shanghai University</a> in 2022.
             <br><br>
-            I was born on Oct 10th, 2000 in <a href="https://en.wikipedia.org/wiki/Dengfeng">Dengfeng</a>, China, which is home to various religious institutions and famous temples and located at the foot of the Mount Song, one of the most sacred mountains in China.
+            I was born on Jul. 29th, 2000 in <a href="https://en.wikipedia.org/wiki/Fuzhou">Fuzhou</a>, China, which is often referred to as the blessed state.
             <br><br>
-            I alse took many Biology & Chemistry courses during my initial 2 years in University. 
+            In 2022, I graduated with honors from Shanghai University and enrolled in the Computer Science Department of Tongji University.
           </td>
         </tr>
       </tbody></table>
@@ -111,7 +111,7 @@
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
             I am working at the intersection between Machine learning and Computer Vision, 
             developing new machine learning methods to resolve the challenging problems in 3D Vision, 
-            especially focus on Reconstruction and Scene Understanding.
+            especially focus on Reconstruction and Scene Understanding.Recent work in progress is sparse view foreground reconstruction and multi-scale 3d Gaussian Splatting.
             <br><br>
             My long-term goal is to improve the application of 3D Vision, 
             benefiting society directly by improving people's living environment. 
@@ -156,10 +156,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='gs_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="research/gs.png" type="video/png">
+            <source src="research/AutoRF-KITTI360.png" type="video/png">
             Your browser does not support the video tag.
             </video></div>
-            <img src='research/gs.png' width="160" height="160">
+            <img src='research/AutoRF-KITTI360.png' width="160" height="160">
           </div>
           <script type="text/javascript">
             function gs_start() {
@@ -174,27 +174,62 @@
         </td>
         
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://bigcileng.github.io/GS_Guangfulin/index.html">
-            <span class="papertitle">3D Gaussian Splatting - rendering work</span>
+          <a>
+            <span class="papertitle">AutoRF Adaptation for KITTI360 Dataset</span>
           </a>
           <br>
-          <strong><em>Nan Wang</em></strong>,
+          <strong><em>Xiaowei Song</em></strong>
           <br>
-          2023/11
+          2023/12
           <br>
-          <a href="https://github.com/BigCiLeng/GeoGS"><em>code</em></a>
-          /
-          <a href="https://bigcileng.github.io/GS_Guangfulin/index.html"><em>project</em></a>
+          <a><em>code(coming soon)</em></a>
           <p></p>
           <p>
             <!-- During the time I am doing my work based on <a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3D Gaussian Splatting</a>, I use it to reconstruct some scene taken by myself. Here are four scenes taken at Guangfulin, a beautiful park in Songjiang District, Shanghai, China. Artifacts from the Zhou Dynasty have also been unearthed at the site. -->
-            I use <a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3D Gaussian Splatting</a> to reconstruct some scene of Guangfulin taken by myself. Guangfulin is a beautiful park in Songjiang District, Shanghai, China.
+            Using <a href="https://sirwyver.github.io/AutoRF/">AutoRF</a>, I replicated its performance on the KITTI360 dataset. This involved data type loading, camera coordinate system conversion and NOCS spatial transformation.
           </p>
         </td>
       </tr>
 
+      <!-- MultiScale Gaussian Splatting -->
+      <tr onmouseout="randla_stop()" onmouseover="randla_stop()" bgcolor="#ffffd0"> <!-- bgcolor="#ffffd0" --> 
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='randla_image'><video  width=100% height=100% muted autoplay loop>
+            <source src="research/MultiSG.png" type="video/png">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='research/MultiSG.png' width="160" height="160">
+          </div>
+          <script type="text/javascript">
+            function randla_start() {
+              document.getElementById('randla_image').style.opacity = "1";
+            }
 
-
+            function randla_stop() {
+              document.getElementById('randla_image').style.opacity = "0";
+            }
+            randla_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a>
+            <span class="papertitle">Multiscale Gaussian Splatting for Compact and Anti-alised Representation</span>
+          </a>
+          <br>
+          <strong><em>Xiaowei Song</em></strong>
+          <br>
+            2023/12
+          <br>
+          <a><em>code(coming soon)</em></a>
+          <p></p>
+          <p>
+            <!-- RandLA-Net(CVPR2020) is a light net which can process efficient semantic segmentation for <strong>3D point clouds</strong>,  -->
+            <!-- and SQN(ECCV2022) is based on RandLA-Net and achieves promising performance on seven large-scale open datasets under <strong>weak supervision schemes</strong>.  -->
+            A coarse-to-fine training strategy was used to train the Gaussian field. Minimum size and maximum number of Gaussians are set for each order, resulting in a compact and anti-aliased representation.
+          </p>
+        </td>
+      </tr>
 
       <!-- STEM EXAM -->
       <tr onmouseout="stemExam_stop()" onmouseover="stemExam_stop()" > <!-- bgcolor="#ffffd0" --> 
@@ -223,9 +258,9 @@
             <span class="papertitle">LLM Science Exam - Use LLMs to answer difficult science questions</span>
           </a>
           <br>
-          <strong><em>Nan Wang</em></strong>,
+          <strong><em>Xiaowei Song</em></strong>,
           <a href="https://micro-han.github.io/">Xiaohan Yan</a>,
-          <a>Xiaowei Song</a>
+          <a href="https://bigcileng.github.io/">Nan Wang</a>
           <br>
           <em>Kaggle</em>, 2023/10
           <br>
@@ -236,49 +271,6 @@
             We gather the wiki pedia knowledge about science questions to make it into a OpenBook Q&A question, 
             then we make three Deberta models with different finetuning and combine their output features to infer the right answer. 
             <!-- It also can be seen as a Retrieval Augmented Generation (RAG) processing.       -->
-          </p>
-        </td>
-      </tr>
-
-      <!-- randla-randlasqn -->
-      <tr onmouseout="randla_stop()" onmouseover="randla_stop()" bgcolor="#ffffd0"> <!-- bgcolor="#ffffd0" --> 
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <div class="one">
-            <div class="two" id='randla_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="research/randla.png" type="video/png">
-            Your browser does not support the video tag.
-            </video></div>
-            <img src='research/randla.png' width="160" height="160">
-          </div>
-          <script type="text/javascript">
-            function randla_start() {
-              document.getElementById('randla_image').style.opacity = "1";
-            }
-
-            function randla_stop() {
-              document.getElementById('randla_image').style.opacity = "0";
-            }
-            randla_stop()
-          </script>
-        </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://github.com/BigCiLeng/RandLA_pl">
-            <span class="papertitle">pytorch-lightning implementation of RandLA-Net && SQN</span>
-          </a>
-          <br>
-          <strong><em>Nan Wang</em></strong>
-          <br>
-            2023/10
-          <br>
-          <a href="https://github.com/BigCiLeng/RandLA_pl"><em>code1</em></a>
-          /
-          <a href="https://github.com/BigCiLeng/SQN_pl"><em>code2</em></a>
-          <p></p>
-          <p>
-            <!-- RandLA-Net(CVPR2020) is a light net which can process efficient semantic segmentation for <strong>3D point clouds</strong>,  -->
-            <!-- and SQN(ECCV2022) is based on RandLA-Net and achieves promising performance on seven large-scale open datasets under <strong>weak supervision schemes</strong>.  -->
-            The implementation of RandLA-Net(CVPR2020) is in <strong><em>code0</em></strong> (for large-scale semantic segmentation). 
-            and SQN(ECCV2022) is in <strong><em>code1</em></strong> (for weak supervision schemes).
           </p>
         </td>
       </tr>
@@ -309,9 +301,9 @@
             <span class="papertitle">Stable Diffusion - Image to Prompts</span>
           </a>
           <br>
-          <strong><em>Nan Wang</em></strong>,
+          <strong><em>Xiaowei Song</em></strong>,
           <a href="https://micro-han.github.io/">Xiaohan Yan</a>,
-          <a>Xiaowei Song</a>
+          <a href="https://bigcileng.github.io/">Nan Wang</a>
           <br>
           <em>Kaggle</em>, 2023/05
           <br>
@@ -349,9 +341,9 @@
             <span class="papertitle">HUAWEIRobot planning for CodeCraft</span>
           </a>
           <br>
-          <strong><em>Nan Wang</em></strong>,
+          <strong><em>Xiaowei Song</em></strong>,
           <a href="https://micro-han.github.io/">Xiaohan Yan</a>,
-          <a>Xiaowei Song</a>
+          <a href="https://bigcileng.github.io/">Nan Wang</a>
           <br>
           <em>CodeCraft</em>, 2023/04
           <br>
@@ -362,13 +354,52 @@
           </p>
         </td>
       </tr>
+
+      <!-- TOOD -->
+      <tr onmouseout="huaweirobot_stop()" onmouseover="huaweirobot_start()" > <!-- bgcolor="#ffffd0" --> 
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='huaweirobot_image'><video  width=100% height=100% muted autoplay loop>
+            <source src="research/TOOD.png" type="video/png">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='research/TOOD.png' width="160" height="160">
+          </div>
+          <script type="text/javascript">
+            function huaweirobot_start() {
+              document.getElementById('huaweirobot_image').style.opacity = "1";
+            }
+
+            function huaweirobot_stop() {
+              document.getElementById('huaweirobot_image').style.opacity = "0";
+            }
+            huaweirobot_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://github.com/KevinSONG729/Research-on-target-detection-methods-combined-with-classification-and-localization-tasks">
+            <span class="papertitle">Research on Task-aligned Object Detection</span>
+          </a>
+          <br>
+          <strong><em>Xiaowei Song</em></strong>
+          <br>
+          <em>Shanghai Excellent Graduation Design</em>, 2022/04
+          <br>
+          <a href="https://github.com/KevinSONG729/Research-on-target-detection-methods-combined-with-classification-and-localization-tasks"><em>code</em></a>
+          <p></p>
+          <p>
+            To study the problem of inconsistency between the regions of interest of the classification head and localization head for single-stage target detection. Propose (1) a training strategy for positive sample point regression frame center clustering and positive sample point semantic center weighting (2) a consistent optimization method for quadratic regression optimization frame quality. Eventually the proposed method outperformed the baseline in both accuracy and recall and became the SOTA for the task at that time.
+          </p>
+        </td>
+      </tr>
+
     </tbody></table>
     
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr>
         <td style="padding:20px;width:100%;vertical-align:middle">
-          <heading>Misc</heading>
+          <heading>Other Honors🏆/Interest😏</heading>
         </td>
       </tr>
     </tbody></table>
@@ -376,15 +407,12 @@
       <!-- write Misc here -->
       <tr>
         <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-          Music🎶:
           <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-          I like playing the piano🎹 and have obtained certification in piano grade 10 from <a href="https://www.shcmusic.edu.cn/main.htm">Shanghai Conservatory of Music</a>.
-          <br><br>
-          Sports🏃‍♂️:
+          I led the team to win <em><strong>the second prize</strong></em> of the 19th Graduate Student Mathematical Modeling Contest in China.
           <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-          I like playing basketball🏀 and I am a fun of NBA star Paul George. 
+          I like playing Soccer⚽ and I am a fan of Lionel Messi. 
           <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-          badminton🏸, swim🏊‍♂️ and etc.
+          badminton🏸, tennis🎾, frisbee🥏 and etc.
         </td>
       </tr>
     </tbody></table>
@@ -392,7 +420,7 @@
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr>
       <td style="padding:20px;width:100%;vertical-align:middle;text-align: right;">
-        Last updated on 2023/11/07
+        Last updated on 2023/12/18
       </td>
       </tr>
     </tbody></table>
