--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <p>If you find any research interests that we might share, feel free to drop me an email. I am always open to potential collaborations. </p>
               <p style="text-align:center">
                 <a href="mailto:Kevin729@tongji.edu.cn">Email</a> &nbsp/&nbsp
-                <a href="data/NanWang_CV_Chinese.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/XiaoweiSong_CV_Chinese.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/KevinSONG729/">Github</a>&nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/%E6%9E%AD%E7%82%9C-%E5%AE%8B-072b822a5/">Linkedin</a>
               </p>
