--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎈</text></svg>">
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😉</text></svg>">
 
   <!-- CSS  -->
   <link href="./files/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection">
@@ -442,7 +442,7 @@
           </td>
         </tr>
         <!-- <div class="footer-copyright center black-text">
-          Copyright © Nana Wang 2023
+          Copyright © Xiaowei Song 2023
         </div>   -->
       </tbody>
     </table>
