--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       <tbody>
         <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5z777ckd6qd&amp;m=0&amp;c=ff0000&amp;cr1=fff600&amp;f=georgia&amp;l=33&amp;bv=50" async="async"></script>
+            <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=50cgfhwuu7s&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
           </td>
         </tr>
         <!-- <div class="footer-copyright center black-text">
