--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -341,8 +341,9 @@
                 <a class="nav-link" onclick="objectSceneEvent(5)">treehill(8x)</a>
               </li>
           </ul>
-          <div class="b-dics" style="width: 120%; font-weight: 600;margin:auto">
+          <div class="b-dics" style="width: 1035px; font-weight: 600;margin:auto">
               <img src="resources/360_images/bicycle_48_raw.png" alt="3DGS">
+              <img src="resources/360_images/bicycle_48_mip.png" alt="Mip-Splatting">
               <img src="resources/360_images/bicycle_48_sags_int.png" alt="SA-GS Integration (Ours)">
               <img src="resources/360_images/bicycle_48_sags_sup.png" alt="SA-GS Super Sampling (Ours)">
               <img src="resources/360_images/bicycle_48_gt.png" alt="GT">
