--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -398,7 +398,7 @@
         </div>
 
         <br><br>
-        <h3 class="title is-4">Effectiveness of 2D Scale-adaptive Filter</h3>
+        <h3 class="title is-4 has-text-centered">Effectiveness of 2D Scale-adaptive Filter</h3>
         <div class="content has-text-justified">
           <p>
             The 2D scale-adaptive filter maintains the consistency of the Gaussian distribution when zooming out, 
