--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -82,23 +82,23 @@
             <span class="author-block">
               <a href="https://apchenstu.github.io/">Jv Zheng</a><sup>*1,3</sup></span>
             <span class="author-block">
-              <a href="https://github.com/hbb1">Shiran Yuan</a><sup>1,4</sup>
+              <a href="https://github.com/Shiran-Yuan">Shiran Yuan</a><sup>1,4</sup>
             </span>
             <br>
             <span class="author-block">
-              <a href="https://tsattler.github.io/">Huan-ang Gao</a><sup>1</sup>
+              <a href="https://c7w.tech/about/">Huan-ang Gao</a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.cvlibs.net/">Jingwei Zhao</a><sup>5</sup>
+              Jingwei Zhao<sup>5</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.cvlibs.net/">Xiang He</a><sup>5</sup>
+              Xiang He<sup>5</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.cvlibs.net/">Weihao Gu</a><sup>5</sup>
+              Weihao Gu<sup>5</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.cvlibs.net/">Hao Zhao</a><sup>†1</sup>
+              <a href="https://sites.google.com/view/fromandto">Hao Zhao</a><sup>†1</sup>
             </span>
           </div>
 
