--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -80,7 +80,7 @@
             <span class="author-block">
               <a href="https://KevinSONG729.github.io/">Xiaowei Song</a><sup>*1,2</sup></span>
             <span class="author-block">
-              <a href="https://apchenstu.github.io/">Jv Zheng</a><sup>*1,3</sup></span>
+              <a href="https://zsy1987.github.io/">Jv Zheng</a><sup>*1,3</sup></span>
             <span class="author-block">
               <a href="https://github.com/Shiran-Yuan">Shiran Yuan</a><sup>1,4</sup>
             </span>
@@ -116,7 +116,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/file/d/1Q7KgGbynzcIEyFJV1I17HgrYz6xrOwRJ/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1uVSdYOXreEuntpswW3HXV-TypKi-ZopQ/view?usp=drive_link"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -137,7 +137,7 @@
           
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/autonomousvision/mip-splatting"
+                <a href="https://github.com/zsy1987/SA-GS/"
                    class="external-link button is-normal is-rounded is-dark disabled">
                   <span class="icon">
                       <i class="fab fa-github"></i>
