--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -126,7 +126,7 @@
               </span>
 
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2403.19615.pdf"
+                <a href="https://arxiv.org/abs/2403.19615"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
