--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -425,11 +425,13 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{Song2024SAGS,
-  author    = {Song, Xiaowei and Zheng, Jv and Yuan, Shiran and Gao, Huan-ang and Zhao, Jingwei and He, Xiang and Gu, Weihao and Zhao, Hao},
-  title     = {SA-GS: Scale-Adaptive Gaussian Splatting for Training-Free Anti-Aliasing},
-  journal   = {arXiv:},
-  year      = {2024},
+    <pre><code>@misc{song2024sags,
+      title={SA-GS: Scale-Adaptive Gaussian Splatting for Training-Free Anti-Aliasing}, 
+      author={Xiaowei Song and Jv Zheng and Shiran Yuan and Huan-ang Gao and Jingwei Zhao and Xiang He and Weihao Gu and Hao Zhao},
+      year={2024},
+      eprint={2403.19615},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }</code></pre>
   </div>
 </section>
