--- a/index.html
+++ b/index.html
@@ -23,7 +23,81 @@
   <link href="./files/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection">
   <link href="./files/aos.css" type="text/css" rel="stylesheet" media="screen,projection">
   <link href="./files/style.css" type="text/css" rel="stylesheet" media="screen,projection">
-
+  <style type="text/css">
+    @import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300italic,300);
+    /* @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons); */
+      /* Color scheme stolen from Sergey Karayev */
+      a {
+      /*color: #b60a1c;*/
+      color: #1772d0;
+      /*color: #bd0a36;*/
+      text-decoration:none;
+      }
+      a:focus, a:hover {
+      color: #f09228;
+      text-decoration:none;
+      }
+      body,td,th,tr,p,a {
+      font-family: 'Roboto', sans-serif;
+      font-size: 15px;
+      font-weight: 300;
+      }
+      strong {
+      font-family: 'Roboto', sans-serif;
+      /*font-family: 'Lato', Verdana, Helvetica, sans-serif;*/
+      /*font-family: 'Avenir Next';*/
+      font-size: 15px;
+      font-weight: 400;
+      }
+      heading {
+      /*font-family: 'Lato', Verdana, Helvetica, sans-serif;*/
+      font-family: 'Roboto', sans-serif;
+      /*font-family: 'Avenir Next';*/
+      /*src: url("./fonts/Roboto_Mono_for_Powerline.ttf");*/
+      font-size: 24px;
+      font-weight: 400;
+      }
+      papertitle {
+      /*font-family: 'Lato', Verdana, Helvetica, sans-serif;*/
+      font-family: 'Roboto', sans-serif;
+      /*font-family: 'Avenir Next';*/
+      /*src: url("./fonts/Roboto_Mono_for_Powerline.ttf");*/
+      font-size: 15px;
+      font-weight:500;
+      }
+      name {
+      /*font-family: 'Lato', Verdana, Helvetica, sans-serif;*/
+      font-family: 'Roboto', sans-serif;
+      /*font-family: 'Avenir Next';*/
+      font-weight: 400;
+      font-size: 32px;
+      }
+      .one
+      {
+      width: 160px;
+      height: 140px;
+      position: relative;
+      }
+      .two
+      {
+      width: 160px;
+      height: 160px;
+      position: absolute;
+      transition: opacity .2s ease-in-out;
+      -moz-transition: opacity .2s ease-in-out;
+      -webkit-transition: opacity .2s ease-in-out;
+      }
+      .fade {
+       transition: opacity .2s ease-in-out;
+       -moz-transition: opacity .2s ease-in-out;
+       -webkit-transition: opacity .2s ease-in-out;
+      }
+      span.highlight {
+          background-color: #ffffd0;
+      }
+    </style>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <script src="scripts/functions.js"></script>
 </head>
 
 <body>
@@ -88,33 +162,35 @@
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
             I am a M.Sc student in Computer Science at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>. 
             <br><br>
-            Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://cs.shu.edu.cn/">Department of Computer Engineering and Science, Shanghai University</a> in 2022.
-            <br><br>
-            I was born on Jul. 29th, 2000 in <a href="https://en.wikipedia.org/wiki/Fuzhou">Fuzhou</a>, China, which is often referred to as the blessed state.
-            <br><br>
-            In 2022, I graduated with honors from Shanghai University and enrolled in the Computer Science Department of Tongji University.
-          </td>
-        </tr>
-      </tbody></table>
-
-      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-        <tr>
-        <td style="padding:20px;width:100%;vertical-align:middle">
-          <heading>Research interests</heading>
-        </td>
-      </tr>
-    </tbody></table>
-
-      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-        <!-- write Research interests here -->
-        <tr>
-          <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-            I am working at the intersection between Machine learning and Computer Vision, 
-            developing new machine learning methods to resolve the challenging problems in 3D Vision, 
-            especially focus on Reconstruction and Scene Understanding.Recent work in progress is sparse view foreground reconstruction and multi-scale 3d Gaussian Splatting.
-            <br><br>
-            My long-term goal is to improve the application of 3D Vision, 
-            benefiting society directly by improving people's living environment. 
+	    <a href="javascript:toggleblock(&#39;old_news&#39;)"><div class="button-13" role="button">show more</div></a>
+	    <div id="old_news" style="display: none;">
+		Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://cs.shu.edu.cn/"> Department of Computer Engineering and Science, Shanghai University</a> in 2022.
+                <br><br>
+            	I was born on Jul. 29th, 2000 in <a href="https://en.wikipedia.org/wiki/Fuzhou">Fuzhou</a>, China, which is often referred to as the blessed state.
+            	<br><br>
+            	In 2022, I graduated with honors from Shanghai University and enrolled in the Computer Science Department of Tongji University.  
+		<br><br>
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        		<tr>
+        			<td style="padding:20px;width:100%;vertical-align:middle">
+          			<heading>Research interests</heading>
+        			</td>
+      			</tr>
+    		</tbody></table>
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        	<!-- write Research interests here -->
+        		<tr>
+          			<td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
+            			I am working at the intersection between Machine learning and Computer Vision, 
+            			developing new machine learning methods to resolve the challenging problems in 3D Vision, 
+            			especially focus on Reconstruction and Scene Understanding. Recent work in progress is sparse-view street foreground reconstruction and Frequency property of 3DGS.
+            			<br><br>
+            			My long-term goal is to improve the application of 3D Vision, 
+            			benefiting society directly by improving people's living environment. 
+          			</td>
+        		</tr>
+      		</tbody></table>
+	    </div>
           </td>
         </tr>
       </tbody></table>
@@ -130,7 +206,8 @@
         <!-- write news here -->
         <tr>
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-            [2023/07/25] coming soon
+            <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.
+	    <strong>[01/2024]</strong> I have become an intern in the Data Computing department of the Artificial Intelligence Centre at <a href="https://haomo.ai/">haomo.ai</a>.
             <br><br>
           </td>
         </tr>
