--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <!-- write news here -->
         <tr>
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-            <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.
+            <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.<br>
 	    <strong>[01/2024]</strong> I have become an intern in the Data Computing department of the Artificial Intelligence Centre at <a href="https://haomo.ai/">haomo.ai</a>.
             <br><br>
           </td>
