--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       }
     </style>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <script src="scripts/functions.js"></script>
+  <script src="scripts/function.js"></script>
 </head>
 
 <body>
