--- a/index.html
+++ b/index.html
@@ -227,6 +227,46 @@
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
       
+      <!-- SA-GS -->
+      <tr onmouseout="randla_stop()" onmouseover="randla_stop()" bgcolor="#ffffd0"> <!-- bgcolor="#ffffd0" --> 
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='randla_image'><video  width=100% height=100% muted autoplay loop>
+            <source src="project-pages/SA-GS/resources/bicycle_zoomoutin.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='research/MultiSG.png' width="160" height="160">
+          </div>
+          <script type="text/javascript">
+            function randla_start() {
+              document.getElementById('randla_image').style.opacity = "1";
+            }
+
+            function randla_stop() {
+              document.getElementById('randla_image').style.opacity = "0";
+            }
+            randla_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a>
+            <span class="papertitle">Multiscale Gaussian Splatting for Compact and Anti-alised Representation</span>
+          </a>
+          <br>
+          <strong><em>Xiaowei Song</em></strong>
+          <br>
+            2023/12
+          <br>
+          <a><em>code(coming soon)</em></a>
+          <p></p>
+          <p>
+            <!-- RandLA-Net(CVPR2020) is a light net which can process efficient semantic segmentation for <strong>3D point clouds</strong>,  -->
+            <!-- and SQN(ECCV2022) is based on RandLA-Net and achieves promising performance on seven large-scale open datasets under <strong>weak supervision schemes</strong>.  -->
+            A coarse-to-fine training strategy was used to train the Gaussian field. Minimum size and maximum number of Gaussians are set for each order, resulting in a compact and anti-aliased representation.
+          </p>
+        </td>
+      </tr>
+      
       <!-- Gaussian splatting -->
       <tr onmouseout="gs_stop()" onmouseover="gs_stop()" bgcolor="#ffffd0"> <!-- bgcolor="#ffffd0" --> 
         <td style="padding:20px;width:25%;vertical-align:middle">
@@ -263,46 +303,6 @@
           <p>
             <!-- During the time I am doing my work based on <a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3D Gaussian Splatting</a>, I use it to reconstruct some scene taken by myself. Here are four scenes taken at Guangfulin, a beautiful park in Songjiang District, Shanghai, China. Artifacts from the Zhou Dynasty have also been unearthed at the site. -->
             Using <a href="https://sirwyver.github.io/AutoRF/">AutoRF</a>, I replicated its performance on the KITTI360 dataset. This involved data type loading, camera coordinate system conversion and NOCS spatial transformation.
-          </p>
-        </td>
-      </tr>
-
-      <!-- MultiScale Gaussian Splatting -->
-      <tr onmouseout="randla_stop()" onmouseover="randla_stop()" bgcolor="#ffffd0"> <!-- bgcolor="#ffffd0" --> 
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <div class="one">
-            <div class="two" id='randla_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="research/MultiSG.png" type="video/png">
-            Your browser does not support the video tag.
-            </video></div>
-            <img src='research/MultiSG.png' width="160" height="160">
-          </div>
-          <script type="text/javascript">
-            function randla_start() {
-              document.getElementById('randla_image').style.opacity = "1";
-            }
-
-            function randla_stop() {
-              document.getElementById('randla_image').style.opacity = "0";
-            }
-            randla_stop()
-          </script>
-        </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
-          <a>
-            <span class="papertitle">Multiscale Gaussian Splatting for Compact and Anti-alised Representation</span>
-          </a>
-          <br>
-          <strong><em>Xiaowei Song</em></strong>
-          <br>
-            2023/12
-          <br>
-          <a><em>code(coming soon)</em></a>
-          <p></p>
-          <p>
-            <!-- RandLA-Net(CVPR2020) is a light net which can process efficient semantic segmentation for <strong>3D point clouds</strong>,  -->
-            <!-- and SQN(ECCV2022) is based on RandLA-Net and achieves promising performance on seven large-scale open datasets under <strong>weak supervision schemes</strong>.  -->
-            A coarse-to-fine training strategy was used to train the Gaussian field. Minimum size and maximum number of Gaussians are set for each order, resulting in a compact and anti-aliased representation.
           </p>
         </td>
       </tr>
