--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <source src="project-pages/SA-GS/resources/bicycle_zoomoutin.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='research/MultiSG.png' width="160" height="160">
+            <img src='project-pages/SA-GS/resources/model_images/teaser.png' width="160" height="160">
           </div>
           <script type="text/javascript">
             function randla_start() {
@@ -249,15 +249,16 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a>
-            <span class="papertitle">Multiscale Gaussian Splatting for Compact and Anti-alised Representation</span>
+          <a href="https://kevinsong729.github.io/project-pages/SA-GS/">
+            <span class="papertitle">SA-GS: Scale-Adaptive Gaussian Splatting for Training-Free Anti-Aliasing</span>
           </a>
           <br>
-          <strong><em>Xiaowei Song</em></strong>
+          <strong><em>Xiaowei Song</em></strong>, <a href="https://zsy1987.github.io/">Jv Zheng</a>, <a href="https://shiran-yuan.github.io/">Shiran Yuan</a>, <a href="https://c7w.tech/about/">Huan-ang Gao</a>,
+		Jingwei Zhao, Xiang He, Weihao Gu, <a href="https://sites.google.com/view/fromandto">Hao Zhao</a>
           <br>
-            2023/12
+            2024/03 &nbsp; <i>Under Review</i>
           <br>
-          <a><em>code(coming soon)</em></a>
+          <a href="https://kevinsong729.github.io/project-pages/SA-GS/"><em>[Project Page]</em></a> <a href="https://github.com/zsy1987/SA-GS"><em>[Code]</em></a>
           <p></p>
           <p>
             <!-- RandLA-Net(CVPR2020) is a light net which can process efficient semantic segmentation for <strong>3D point clouds</strong>,  -->
