--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -82,7 +82,7 @@
             <span class="author-block">
               <a href="https://zsy1987.github.io/">Jv Zheng</a><sup>*1,3</sup></span>
             <span class="author-block">
-              <a href="https://github.com/Shiran-Yuan">Shiran Yuan</a><sup>1,4</sup>
+              <a href="https://shiran-yuan.github.io/">Shiran Yuan</a><sup>1,4</sup>
             </span>
             <br>
             <span class="author-block">
