--- a/project-pages/SA-GS/index.html
+++ b/project-pages/SA-GS/index.html
@@ -425,14 +425,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{song2024sags,
-      title={SA-GS: Scale-Adaptive Gaussian Splatting for Training-Free Anti-Aliasing}, 
-      author={Xiaowei Song and Jv Zheng and Shiran Yuan and Huan-ang Gao and Jingwei Zhao and Xiang He and Weihao Gu and Hao Zhao},
-      year={2024},
-      eprint={2403.19615},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-}</code></pre>
+    <pre><code>@article{song2024sa,
+      title={SA-GS: Scale-Adaptive Gaussian Splatting for Training-Free Anti-Aliasing},
+      author={Song, Xiaowei and Zheng, Jv and Yuan, Shiran and Gao, Huan-ang and Zhao, Jingwei and He, Xiang and Gu, Weihao and Zhao, Hao},
+      journal={arXiv preprint arXiv:2403.19615},
+      year={2024}
+    }</code></pre>
   </div>
 </section>
 
