--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <source src="project-pages/SA-GS/resources/bicycle_zoomoutin.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='project-pages/SA-GS/resources/model_images/teaser.png' width="160" height="160">
+            <img src='research\SA-GS.png' width="160">
           </div>
           <script type="text/javascript">
             function randla_start() {
