[feat] update cv file

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
               <p style="text-align:center">
                 <name>Xiaowei Song&nbsp;&nbsp;&nbsp;宋枭炜</name>
               </p>
-              <p>I am a Second-year Computer Science Master's student at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>.
+              <p>I am currently a Simulation Algorithm Engineer at <a href="https://www.lightwheel.ai/">Lightwheel AI</a>, working since July 2025.
               </p>
-              <p>
-               I did my B.Sc. in Compter Science and Technology at <a href="https://cs.shu.edu.cn/">Shanghai University</a>.</p>
+              <p> M.S. in <a href="https://cs.tongji.edu.cn/index.htm">Computer Science</a> | Tongji University | 2022 - 2025 </p>
+              <p> B.S. in <a href="https://cs.shu.edu.cn/">Computer Science and Technology</a> | Shanghai University | 2018 - 2022 </p>
               <p>My research interests are computer vision, machine learning and multimodal generation, specifically, learning-based methods for 3D implicit representation, 3D Gaussian Splatting, Generation, etc.</p>
               <p>If you find any research interests that we might share, feel free to drop me an email. I am always open to potential collaborations. </p>
               <p style="text-align:center">
-                <a href="mailto:Kevin729@tongji.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="mailto:xiaowei.song@lightwheel.ai">Email</a> &nbsp/&nbsp
                 <a href="data/XiaoweiSong_CV_Chinese.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/KevinSONG729/">Github</a>&nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/%E6%9E%AD%E7%82%9C-%E5%AE%8B-072b822a5/">Linkedin</a>
@@ -136,6 +136,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <!-- write logos here -->
           <tr>
+            <td style=width:20%;vertical-align:middle;padding-left:20px>
+              <a href="https://www.lightwheel.ai/"><img height="65" src="images/lightwheel-logo.png"></a>
+            </td>
             <td style=width:20%;vertical-align:middle;padding-left:20px>
               <a href="https://see.tongji.edu.cn/index.htm"><img height="65" src="images/tj3.png"></a>
             </td>
@@ -159,11 +162,13 @@
         <!-- write Bio here -->
         <tr>
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-            I am a M.Sc student in Computer Science at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>. 
+            I am a simulation algorithm engineer at Lightwheel AI. 
             <br><br>
 	    <a href="javascript:toggleblock(&#39;old_news&#39;)"><div class="button-13" role="button">show more</div></a>
 	    <div id="old_news" style="display: none;">
-		Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://cs.shu.edu.cn/"> Department of Computer Engineering and Science, Shanghai University</a> in 2022.
+        I am a M.Sc student in Computer Science at <a href="https://see.tongji.edu.cn/index.htm">CAD Research Center, Tongji University</a>.
+        <br><br>
+        Before that, I received my B.Sc degree in Computing Science and Technology from <a href="https://cs.shu.edu.cn/"> Department of Computer Engineering and Science, Shanghai University</a> in 2022.
                 <br><br>
             	I was born on Jul. 29th, 2000 in <a href="https://en.wikipedia.org/wiki/Fuzhou">Fuzhou</a>, China, which is often referred to as the blessed state.
             	<br><br>
@@ -205,8 +210,11 @@
         <!-- write news here -->
         <tr>
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
-            <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.<br>
-	    <strong>[01/2024]</strong> I have become an intern in the Data Computing department of the Artificial Intelligence Centre at <a href="https://haomo.ai/">haomo.ai</a>.
+            <strong>[07/2025]</strong> I have joined <a href="https://www.lightwheel.ai/">Lightwheel AI</a> full-time as a Simulation Algorithm Engineer.<br>
+            <strong>[10/2024]</strong> I joined <a href="https://www.lightwheel.ai/">Lightwheel AI</a> as an intern in simulation environment algorithms.
+            <strong>[04/2024]</strong> I joined <a href="https://www.nio.cn/">NIO</a>'s Environmental Perception Team as an Algorithm Intern. <br>
+            <strong>[01/2024]</strong> I have become an intern in the Data Computing department of the Artificial Intelligence Centre at <a href="https://haomo.ai/">haomo.ai</a>.<br>
+            <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.
             <br><br>
           </td>
         </tr>
