--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <tr>
           <td style=padding:00px;width:22%;vertical-align:middle;padding-left:20px>
             <strong>[07/2025]</strong> I have joined <a href="https://www.lightwheel.ai/">Lightwheel AI</a> full-time as a Simulation Algorithm Engineer.<br>
-            <strong>[10/2024]</strong> I joined <a href="https://www.lightwheel.ai/">Lightwheel AI</a> as an intern in simulation environment algorithms.
+            <strong>[10/2024]</strong> I joined <a href="https://www.lightwheel.ai/">Lightwheel AI</a> as an intern in simulation environment algorithms.<br>
             <strong>[04/2024]</strong> I joined <a href="https://www.nio.cn/">NIO</a>'s Environmental Perception Team as an Algorithm Intern. <br>
             <strong>[01/2024]</strong> I have become an intern in the Data Computing department of the Artificial Intelligence Centre at <a href="https://haomo.ai/">haomo.ai</a>.<br>
             <strong>[12/2023]</strong> I have been on a research internship at <a href="https://air.tsinghua.edu.cn/">Institute for Al Industry Research (AIR), Tsinghua University</a>.
